public class Caballo extends Pieza{

    public Caballo(int color,int columna,int fila){
        super(color,columna,fila);

        tipoPieza = Tipo.CABALLO;

        if(color == GUI.BLANCO){
            imagen = getImagen("/sprites/caballoBlanco");
        }else if(color == GUI.NEGRO){
            imagen = getImagen("/sprites/caballoNegro");
        }
    }

    public boolean puedeMoverse(int columnaObjetivo, int filaObjetivo){
        if(dentroTablero(columnaObjetivo,filaObjetivo)){
            if(Math.abs(columnaObjetivo-columnaPrevia)*Math.abs(filaObjetivo-filaPrevia) == 2){
                if(cuadradoValido(columnaObjetivo,filaObjetivo)){
                    return true;
                }
            }
        }
        return false;
    }
}
