public enum Tipo {
    PEON, TORRE, ALFIL, CABALLO, REINA, REY;
}
